Add improvements for tests